# GithubAnalyzer

./: .gitignore  Cargo.toml  Dockerfile  README.md
api/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
api/.husky/: pre-commit  pre-push
api/prisma/: schema.prisma
api/src/: index.ts  schema.ts
api/src/lib/: auth.ts
api/src/routes/: protected.ts
rs-bin/src/: main.rs
src/: main.rs
