[package]
name = "github_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = {version = "0.8.2", features =["crossbeam-deque"]}
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.5.0"
url = "2.3.1"
